--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,4 @@ script:
   - cd build
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
   - ./test/basic_tests/runTests
+  - python logsender.py
